# InsightFeed

./: .gitignore  LICENSE  README.md  api.py  docker-compose.yml  ingest.py  pyproject.toml  search.py
src/collectors/: rss_collector.py
src/database/: crud.py  db.py  models.py
src/processors/: embedder.py
